@@ -6,4 +6,7 @@ my $self = shift;
 
 my ($nodes, $tot, $users, $maxlocalusers, $maxusers, $uptime, $localnodes) = Route::cluster();
 
+$localnodes = $main::routeroot->nodes;
+$users = $main::routeroot->users;
+
 return (1, $self->msg('cluster', $localnodes, $nodes, $users, $tot, $maxlocalusers, $maxusers, $uptime));
